part1/ex1.13/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - name: http
      protocol: TCP
      port: 1234
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 3000
