part1/ex1.13/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ing
spec:
  rules:
    - http:
        paths:
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 1234
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 1234
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-svc
                port:
                  number: 2345
